change scrollbar and repair hours in nextWeek.jsx

--- a/src/Component/style/Today.css
+++ b/src/Component/style/Today.css
@@ -1,6 +1,5 @@
 .div-graph{
     width: 90%;
-    border: 5px solid #00a2ff; 
     border-radius: 15px;
     margin: 5% 0;
   }
